--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-query": "^3.39.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
